--- a/templates/index.html
+++ b/templates/index.html
@@ -1,35 +1,11 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <script src="//code.jquery.com/jquery-3.3.1.min.js"></script>
-        <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.6/socket.io.min.js"></script>
-        <script src="static/js/application.js"></script>
-        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-        <!-- <style> -->
-        <!--     #ztable { -->
-        <!--         font-family: 'Trebuchet MS', Arial, Helvetica, sans-serif; -->
-        <!--         width: 80%; -->
-        <!--     } -->
-        <!--     #ztable td, #ztable th { -->
-        <!--         border: 2px solid #ddd; -->
-        <!--         padding: 8px; -->
-        <!--     } -->
-        <!--     #ztable tr:nth-child(even){background-color: #f2f2f2;} -->
-        <!--     #ztable tr:hover {background-color: #ddd;} -->
-        <!--     #ztable th { -->
-        <!--         text-align: center; -->
-        <!--         background-color: #4CAF50 -->
-        <!--     } -->
-        <!--     #ztable td { -->
-        <!--         text-align: center; -->
-        <!--     } -->
-        <!-- </style> -->
-    </head>
+{% extends 'base.html' %}
+
+{% block content %}
     <body>
         <div>
-            <h1 align="center">Monarch Metal Manufacturing</h1>
             <h1 align="center">Material Racks</h1>
             <br>
+            <h3>Something I'm working on... Give it time</h3>
             <div class="form-group">
                 <select class="form-control" name ="material">
                     <option value="Material">Material</option>
@@ -38,12 +14,6 @@
                     {% endfor %}
                 </select>
             </div>
-            <h3 align="center"><a href="{{ url_for('rack01') }}">Rack 01</a>
-            <h3 align="center"><a href="{{ url_for('rack02') }}">Rack 02</a>
-            <br>
-            <br>
-            <br>
-            <h3 align="center"><a href="http://10.0.1.51:5000">Monarch Metal Home Page</a>
         </div>
     </body>
-</html>
+{% endblock %}
