--- a/templates/rack03.html
+++ b/templates/rack03.html
@@ -1,36 +1,28 @@
 {% extends 'base.html' %}
 
 {% block content %}
+    <h1 align="center">Rack 03</h1>
+    <br>
     <body>
-        <div>
-            <div class="row">
-                <h3 align="center">Rack 03</h3>
-                <br>
-                <table id="ztable" align="center">
-                    <thead>
-                    <tr>
-                        <th width="10%">Row</th>
-                        <th width="15%">Material Type</th>
-                        <th width="15%">Sheet Size</th>
-                        <th width="10%">No. of Sheets</th>
-                        <th width="50%">Notes</th>
-                    </tr>
-                    </thead>
-                    <tbody id="rows">
-                        <tr><td><a href="/edit/{{ rack[46][0] }}"><span style="font-weight:bold">{{ rack[46][1] }}</span></a></td><td> {{ rack[46][3] }}</td><td>{{ rack[46][4] }}</td><td>{{rack[46][2] }}</td><td> {{ rack[46][5] }} </td></tr>
-                        <tr><td><a href="/edit/{{ rack[45][0] }}"><span style="font-weight:bold">{{ rack[45][1] }}</span></a></td><td> {{ rack[45][3] }}</td><td>{{ rack[45][4] }}</td><td>{{rack[45][2] }}</td><td> {{ rack[45][5] }} </td></tr>
-                        <tr><td><a href="/edit/{{ rack[44][0] }}"><span style="font-weight:bold">{{ rack[44][1] }}</span></a></td><td> {{ rack[44][3] }}</td><td>{{ rack[44][4] }}</td><td>{{rack[44][2] }}</td><td> {{ rack[44][5] }} </td></tr>
-                        <tr><td><a href="/edit/{{ rack[43][0] }}"><span style="font-weight:bold">{{ rack[43][1] }}</span></a></td><td> {{ rack[43][3] }}</td><td>{{ rack[43][4] }}</td><td>{{rack[43][2] }}</td><td> {{ rack[43][5] }} </td></tr>
-                        <tr><td><a href="/edit/{{ rack[42][0] }}"><span style="font-weight:bold">{{ rack[42][1] }}</span></a></td><td> {{ rack[42][3] }}</td><td>{{ rack[42][4] }}</td><td>{{rack[42][2] }}</td><td> {{ rack[42][5] }} </td></tr>
-                        <tr><td><a href="/edit/{{ rack[41][0] }}"><span style="font-weight:bold">{{ rack[41][1] }}</span></a></td><td> {{ rack[41][3] }}</td><td>{{ rack[41][4] }}</td><td>{{rack[41][2] }}</td><td> {{ rack[41][5] }} </td></tr>
-                        <tr><td><a href="/edit/{{ rack[40][0] }}"><span style="font-weight:bold">{{ rack[40][1] }}</span></a></td><td> {{ rack[40][3] }}</td><td>{{ rack[40][4] }}</td><td>{{rack[40][2] }}</td><td> {{ rack[40][5] }} </td></tr>
-                        <tr><td><a href="/edit/{{ rack[39][0] }}"><span style="font-weight:bold">{{ rack[39][1] }}</span></a></td><td> {{ rack[39][3] }}</td><td>{{ rack[39][4] }}</td><td>{{rack[39][2] }}</td><td> {{ rack[39][5] }} </td></tr>
-                        <tr><td><a href="/edit/{{ rack[38][0] }}"><span style="font-weight:bold">{{ rack[38][1] }}</span></a></td><td> {{ rack[38][3] }}</td><td>{{ rack[38][4] }}</td><td>{{rack[38][2] }}</td><td> {{ rack[38][5] }} </td></tr>
-                        <tr><td><a href="/edit/{{ rack[37][0] }}"><span style="font-weight:bold">{{ rack[37][1] }}</span></a></td><td> {{ rack[37][3] }}</td><td>{{ rack[37][4] }}</td><td>{{rack[37][2] }}</td><td> {{ rack[37][5] }} </td></tr>
-                        <tr><td><a href="/edit/{{ rack[36][0] }}"><span style="font-weight:bold">{{ rack[36][1] }}</span></a></td><td> {{ rack[36][3] }}</td><td>{{ rack[36][4] }}</td><td>{{rack[36][2] }}</td><td> {{ rack[36][5] }} </td></tr>
-                    </tbody>
-                </table>
-            </div>
-        </div>
+        <table id="myTable">
+            <tr class="header">
+                <th width="10%">Row</th>
+                <th width="15%">Material Type</th>
+                <th width="15%">Sheet Size</th>
+                <th width="10%">No. of Sheets</th>
+                <th width="50%">Notes</th>
+            </tr>
+            <tr><td><a href="/edit/{{ rack[46][0] }}"><span style="font-weight:bold">{{ rack[46][1] }}</span></a></td><td> {{ rack[46][3] }}</td><td>{{ rack[46][4] }}</td><td>{{rack[46][2] }}</td><td> {{ rack[46][5] }} </td></tr>
+            <tr><td><a href="/edit/{{ rack[45][0] }}"><span style="font-weight:bold">{{ rack[45][1] }}</span></a></td><td> {{ rack[45][3] }}</td><td>{{ rack[45][4] }}</td><td>{{rack[45][2] }}</td><td> {{ rack[45][5] }} </td></tr>
+            <tr><td><a href="/edit/{{ rack[44][0] }}"><span style="font-weight:bold">{{ rack[44][1] }}</span></a></td><td> {{ rack[44][3] }}</td><td>{{ rack[44][4] }}</td><td>{{rack[44][2] }}</td><td> {{ rack[44][5] }} </td></tr>
+            <tr><td><a href="/edit/{{ rack[43][0] }}"><span style="font-weight:bold">{{ rack[43][1] }}</span></a></td><td> {{ rack[43][3] }}</td><td>{{ rack[43][4] }}</td><td>{{rack[43][2] }}</td><td> {{ rack[43][5] }} </td></tr>
+            <tr><td><a href="/edit/{{ rack[42][0] }}"><span style="font-weight:bold">{{ rack[42][1] }}</span></a></td><td> {{ rack[42][3] }}</td><td>{{ rack[42][4] }}</td><td>{{rack[42][2] }}</td><td> {{ rack[42][5] }} </td></tr>
+            <tr><td><a href="/edit/{{ rack[41][0] }}"><span style="font-weight:bold">{{ rack[41][1] }}</span></a></td><td> {{ rack[41][3] }}</td><td>{{ rack[41][4] }}</td><td>{{rack[41][2] }}</td><td> {{ rack[41][5] }} </td></tr>
+            <tr><td><a href="/edit/{{ rack[40][0] }}"><span style="font-weight:bold">{{ rack[40][1] }}</span></a></td><td> {{ rack[40][3] }}</td><td>{{ rack[40][4] }}</td><td>{{rack[40][2] }}</td><td> {{ rack[40][5] }} </td></tr>
+            <tr><td><a href="/edit/{{ rack[39][0] }}"><span style="font-weight:bold">{{ rack[39][1] }}</span></a></td><td> {{ rack[39][3] }}</td><td>{{ rack[39][4] }}</td><td>{{rack[39][2] }}</td><td> {{ rack[39][5] }} </td></tr>
+            <tr><td><a href="/edit/{{ rack[38][0] }}"><span style="font-weight:bold">{{ rack[38][1] }}</span></a></td><td> {{ rack[38][3] }}</td><td>{{ rack[38][4] }}</td><td>{{rack[38][2] }}</td><td> {{ rack[38][5] }} </td></tr>
+            <tr><td><a href="/edit/{{ rack[37][0] }}"><span style="font-weight:bold">{{ rack[37][1] }}</span></a></td><td> {{ rack[37][3] }}</td><td>{{ rack[37][4] }}</td><td>{{rack[37][2] }}</td><td> {{ rack[37][5] }} </td></tr>
+            <tr><td><a href="/edit/{{ rack[36][0] }}"><span style="font-weight:bold">{{ rack[36][1] }}</span></a></td><td> {{ rack[36][3] }}</td><td>{{ rack[36][4] }}</td><td>{{rack[36][2] }}</td><td> {{ rack[36][5] }} </td></tr>
+         </table>
     </body>
 {% endblock %}
