--- a/templates/index.html
+++ b/templates/index.html
@@ -5,15 +5,73 @@
         <div>
             <h1 align="center">Material Racks</h1>
             <br>
-            <h3>Something I'm working on... Give it time</h3>
+            <h3>Quick Find</h3>
             <div class="form-group">
-                <select class="form-control" name ="material">
-                    <option value="Material">Material</option>
+                <select class="form-control" name ="material" id="material">
+                    <option value="Material">Select Material</option>
                     {% for m in mtl %}
-                    <option value={{m}}>{{m}}</option>
+                    <option value="{{ m }}">{{ m[2] }}</option>
                     {% endfor %}
                 </select>
             </div>
+            <button type="submit" class="btn btn-block btn-primary findBtn">Find</button>
         </div>
+        <div id="rackFind"></div>
+        <div id="rowFind"></div>
+        <div id="sizeFind"></div>
+        <div id="numFind"></div>
+        <div id="noteFind"></div>
+    
+    <script>
+        let allMtl = [];
+        $(".findBtn").on('click', function() {
+            $("#rackFind").html('');
+            $("#rowFind").html('');
+            $("#sizeFind").html('');
+            $("#numFind").html('');
+            $("#noteFind").html('');
+            let selectedMatl = $("#material").val();
+            let data = selectedMatl.split("'");
+            console.log(data)
+            let rack;
+            if (data[1] > 0 && data[1] <= 18) {
+                rack = 1;
+            } else if (data[1] >= 19 && data[1] <= 36) {
+                rack = 2;
+            } else if (data[1] >= 37 && data[1] <= 47) {
+                rack = 3;
+            } else if (data[1] >= 48 && data[1] <= 57) {
+                rack = 4;
+            } else if (data[1] >= 58 && data[1] <= 67) {
+                rack = 5;
+            } else if (data[1] >= 68 && data[1] <= 77) {
+                rack = 6;
+            } else if (data[1] >= 78 && data[1] <= 86) {
+                rack = 7;
+            } else if (data[1] >= 87 && data[1] <= 94) {
+                rack = 8;
+            } else if (data[1] >= 95 && data[1] <= 102) {
+                rack = 9;
+            } else if (data[1] >= 103 && data[1] <= 110) {
+                rack = 10;
+            } else if (data[1] >= 111 && data[1] <= 118) {
+                rack = 11;
+            } 
+            $("#rackFind").append("Rack: "+rack);
+            $("#rowFind").append("Row: "+data[1]);
+            $("#sizeFind").append("Sheet Size: "+data[7]);
+            $("#numFind").append("Sheets in Stock: "+data[3]);
+            $("#noteFind").append("Notes: "+data[9]);
+            if (data[0] == 'Material') {
+                console.log('yes')
+                $("#rackFind").html('');
+                $("#rowFind").html('');
+                $("#sizeFind").html('');
+                $("#numFind").html('');
+                $("#noteFind").html('');
+            }
+        });
+    </script>
+
     </body>
 {% endblock %}
